--- a/MorphanBot/MorphanBot.csproj
+++ b/MorphanBot/MorphanBot.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="MemeGenerator.cs" />
     <Compile Include="MonkeyMath.cs" />
     <Compile Include="MorphBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
